sms api and service done'
