# api-gateway/internal/routes/education_routes.go
@@ -44,11 +44,11 @@ func EducationRoutes(api *gin.RouterGroup, userClient *client.UserClient) {
 		companySms.POST("/get-logs", etc.AuthMiddleware([]string{"ADMIN", "CEO", "FINANCIST", "SUPER_CEO"}, userClient), handlers.GetSmsLogs)
 		companySms.POST("/add-sms-count", etc.AuthMiddleware([]string{"SUPER_CEO"}, userClient), handlers.AddSmsCount)
 		companySms.DELETE("/delete-sms-count", etc.AuthMiddleware([]string{"SUPER_CEO"}, userClient), handlers.DeleteSmsCount)
-		companySms.GET("/get-sms-count-all", etc.AuthMiddleware([]string{"ADMIN, CEO", "SUPER_CEO"}, userClient), handlers.GetSmsTransactionDetail)
+		companySms.POST("/get-sms-count-all", etc.AuthMiddleware([]string{"ADMIN, CEO", "SUPER_CEO"}, userClient), handlers.GetSmsTransactionDetail)
 		companySms.POST("/send-directly", etc.AuthMiddleware([]string{"ADMIN", "CEO"}, userClient), handlers.SendSmsDirectly)
 		companySmsTemplate := companySms.Group("/template")
-		companySmsTemplate.GET("/get-templates", etc.AuthMiddleware([]string{"ADMIN", "CEO"}, userClient), handlers.GetSmsTemplates)
-		companySmsTemplate.POST("/set-template", etc.AuthMiddleware([]string{"CEO", "ADMIN"}, userClient), handlers.SetSmsTemplates)
+		companySmsTemplate.POST("/get-templates", etc.AuthMiddleware([]string{"ADMIN", "CEO"}, userClient), handlers.GetSmsTemplates)
+		companySmsTemplate.PUT("/set-template", etc.AuthMiddleware([]string{"CEO", "ADMIN"}, userClient), handlers.SetSmsTemplates)
 	}
 
 	room := api.Group("/room")
